<resources>
    <string name="app_name">FindFut</string>
    <string name="facebook_app_id">1549045515380185</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="login_button_text">Entrar</string>
    <string name="sign_up_text">Cadastre-se</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="first_name_hint">Nome</string>
    <string name="last_name_hint">Sobrenome</string>
    <string name="bday_hint">Data de Nascimento</string>
    <string name="confirm_password_hint">Confirmar Senha</string>
    <string name="sign_up_button_text">Cadastrar</string>
    <string name="state_hint">Estado</string>
    <string name="city_hint">Cidade</string>
    <string name="action_logout">Logout</string>
</resources>
